--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Finne-gang!</title>
   </head>
   <body>
-    <h1>Welcome to the Finne-gang website! Under construction</h1>
+    <h1>Finnegang</h1>
+    <h2>Welcome to the official website of the Finnegang!</h2>
   </body>
 </html>
