--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html>
   <head>
     <title>Finne-gang!</title>
+    <style>
+      aside{
+        width:20%;
+        background-color:blue;
+      }
+    </style>
   </head>
   <body>
+    <aside>
     <h1>Finnegang</h1>
     <h2>Welcome to the official website of the Finnegang!</h2>
+    </aside>
   </body>
 </html>
