--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
         height:100%;
         background-color:blue;
       }
+      #title{
+        color:red;
+        font-size:1.5em;
+      }
     </style>
   </head>
   <body>
     <aside>
-    <h1>Finnegang</h1>
+    <h1 id="title">Finnegang</h1>
     <h2>Welcome to the official website of the Finnegang!</h2>
     </aside>
   </body>
