--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
   <head>
     <title>Finne-gang!</title>
     <style>
-      aside{
-        width:20%;
-        height:100%;
-        background-color:blue;
+      header{
+        position:fixed;
+        height:10%;
+        box-shadow: 2px 2px 10px black;
       }
       #title{
-        color:red;
-        font-size:20px;
+       width:20%;
       }
     </style>
   </head>
   <body>
-    <aside>
-    <h1 id="title">Finnegang</h1>
-    <h2>Welcome to the official website of the Finnegang!</h2>
-    </aside>
+    <header>
+      <div id="title"><h1>Finne-gang</h1></div>
+      
+    </header>
   </body>
 </html>
