--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
       header{
         position:fixed;
         height:10%;
+        width:100%;
         box-shadow: 2px 2px 10px black;
       }
       #title{
-       width:20%;
+       width:30%;
+       font-size: 1em;
       }
     </style>
   </head>
