--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <title>Finne-gang!</title>
     <style>
       header{
-        position:fixed;
-        height:10%;
-        width:100%;
-        box-shadow: 0px 2px 10px black;
+        text-align:center;
+	padding:5px;
+	box-shadow:2px 2px 10px black;
+	position:fixed;
+	width:100%;
+	background-color:white;
+	font-size:0.9em;
       }
       #title{
        width:30%;
