--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <title>Finne-gang!</title>
     <style>
+	    body{
+	    margin:0px;
+	    } 
       header{
         text-align:center;
 	padding:5px;
