--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
       #title{
        width:30%;
        font-size: 1em;
+       display:inline;
       }
     </style>
   </head>
   <body>
     <header>
       <div id="title"><h1>Finne-gang</h1></div>
-      
+	    <p>Dead link 1</p>
     </header>
   </body>
 </html>
