--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Finne-gang!</title>
     <style>
 	    body{
-	    margin:0px;
+	    margin:0px auto;
 	    } 
       header{
         text-align:center;
@@ -16,7 +16,6 @@
 	font-size:0.9em;
       }
       #title{
-       width:30%;
        font-size: 1em;
        display:inline;
       }
