--- a/index.html
+++ b/index.html
@@ -19,12 +19,18 @@
        font-size: 1em;
        display:inline;
       }
+	.menu{
+		display:inline-block;    
+	}
+	    a{
+	    	text-decoration:none;
+	    }
     </style>
   </head>
   <body>
     <header>
-      <div id="title"><h1>Finne-gang</h1></div>
-	    <p>Dead link 1</p>
+      <div id="title" class="menu"><h1>Finne-gang</h1></div>
+	    <a><p class="menu">Dead link 1</p></a>
     </header>
   </body>
 </html>
