--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
     <header>
       <div id="title" class="menu"><h1>Finne-gang</h1></div>
-	    <a><p class="menu">Dead link 1</p></a>
+	    <div class="menu"><a>Dead link 1</a></div>
     </header>
   </body>
 </html>
